更新工作完成表

--- a/文档/工作完成表.md
+++ b/文档/工作完成表.md
@@ -1,5 +1,23 @@
-December 5, 2017 7:46 PM
 - [x] 修改实现手柄的拾取功能
 - [x] 修改实现手柄的移动方式
-- [ ] 修改实现手柄的凿墙操作
+- [x] 修改实现手柄的凿墙操作
 - [ ] 修改实现手柄的转动镜子操作
+
+##动画
+### 主角
+- [ ]凿墙
+- [ ] 转动镜子
+- [ ] 拿起道具
+- [ ] 放下道具
+- [ ] idle
+- [ ] 走路
+- [ ] 跑步
+- [ ] 失败
+- [ ] 胜利
+- [ ] 读书动画
+
+### 侍卫
+- [ ]走路
+- [ ] 跑步
+- [ ] 胜利
+- [ ]疑惑 --失败
