更新文档里的UML图

--- a/文档/工作完成表.md
+++ b/文档/工作完成表.md
@@ -1,7 +1,7 @@
 - [x] 修改实现手柄的拾取功能
 - [x] 修改实现手柄的移动方式
 - [x] 修改实现手柄的凿墙操作
-- [ ] 修改实现手柄的转动镜子操作
+- [x] 修改实现手柄的转动镜子操作
 
 ##动画
 ### 主角
@@ -21,3 +21,7 @@
 - [ ] 跑步
 - [ ] 胜利
 - [ ]疑惑 --失败
+
+
+## 
+- [ ] 随机生成不同的道具
