更新 工作完成表

--- a/文档/工作完成表.md
+++ b/文档/工作完成表.md
@@ -25,3 +25,8 @@
 
 ## 
 - [ ] 随机生成不同的道具
+- [ ] 房间内可以多设置一些机关
+- [ ] 拿着不同的道具时，最大移动速度不一样
+	- [x]设置了正常速度和拿着道具的速度
+- [x] 凿子碰到墙的一瞬间，发出碎屑和声音
+- [ ]修改开门的问题 
