增加一些参考内容

--- a/文档/工作完成表.md
+++ b/文档/工作完成表.md
@@ -29,7 +29,10 @@
 - [ ] 拿着不同的道具时，最大移动速度不一样
 	- [x]设置了正常速度和拿着道具的速度
 - [x] 凿子碰到墙的一瞬间，发出碎屑和声音
-- [ ]修改开门的问题 
+- [x]修改开门的问题 
+- [ ] 做个蜘蛛网
+- [ ] 研究房间生成
 
 ## 美术
 - [ ]开场动画
+- [ ]模型面数多的需要减面(需要做简化的碰撞盒)
