添加破碎的墙体

--- a/文档/工作完成表.md
+++ b/文档/工作完成表.md
@@ -30,8 +30,10 @@
 	- [x]设置了正常速度和拿着道具的速度
 - [x] 凿子碰到墙的一瞬间，发出碎屑和声音
 - [x]修改开门的问题 
-- [ ] 做个蜘蛛网
+- [x] 做个蜘蛛网
+- [ ] 研究APEX效果
 - [ ] 研究房间生成
+- [ ] 程序生成房间
 
 ## 美术
 - [ ]开场动画
