更新工作完成表

--- a/文档/工作完成表.md
+++ b/文档/工作完成表.md
@@ -23,7 +23,7 @@
 - [ ]疑惑 --失败
 
 
-## 
+## 程序
 - [ ] 随机生成不同的道具
 - [ ] 房间内可以多设置一些机关
 - [ ] 拿着不同的道具时，最大移动速度不一样
@@ -34,7 +34,16 @@
 - [ ] 研究APEX效果
 - [ ] 研究房间生成
 - [ ] 程序生成房间
+- [ ] 道具提示在道具身上，类似于**塞尔达**
+- [ ] 灯笼作为光源
+- [ ] 放大镜汇聚点亮镜子的光线（从面的法线出来更细更亮）
 
+- [ ] 门和凿墙的操作一样，用按键开关门（开关门用来躲避侍卫）
 ## 美术
 - [ ]开场动画
 - [ ]模型面数多的需要减面(需要做简化的碰撞盒)
+
+# 策划（待定保留）？？
+- 1.光不要在走廊里 ？？
+- 2.机关！！？？（窗户的机关）
+- 3.凿墙，补墙？？
