更新工作完成表

--- a/文档/工作完成表.md
+++ b/文档/工作完成表.md
@@ -31,7 +31,7 @@
 - [x] 凿子碰到墙的一瞬间，发出碎屑和声音
 - [x]修改开门的问题 
 - [x] 做个蜘蛛网
-- [ ] 研究APEX效果
+- [ ] 研究APEX效果-- 研究未果
 - [ ] 研究房间生成
 - [ ] 程序生成房间
 - [ ] 道具提示在道具身上，类似于**塞尔达**
